--- a/app/src/main/res/layout/view_holder_order_item.xml
+++ b/app/src/main/res/layout/view_holder_order_item.xml
@@ -128,7 +128,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/button_background"
+                android:backgroundTint="@color/glass_blue_1"
                 android:text="View detail"
                 android:textColor="@android:color/white"
                 android:visibility="visible"
@@ -139,7 +139,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/button_background"
+                android:backgroundTint="@color/glass_blue_1"
                 android:text="Cancel"
                 android:textColor="@android:color/white"
                 android:visibility="visible"
@@ -150,7 +150,7 @@
                 android:id="@+id/btn_prepare_order"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/button_background"
+                android:backgroundTint="@color/glass_blue_1"
                 android:backgroundTintMode="src_in"
                 android:text="Prepare"
                 android:textColor="@android:color/white"
