--- a/app/src/main/res/layout/activity_add_feedback.xml
+++ b/app/src/main/res/layout/activity_add_feedback.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp"
-        android:background="@android:color/white">
+        android:background="@drawable/glass_bg">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -122,7 +122,7 @@
                 android:layout_marginStart="16dp"
                 android:text="Pick an Image"
                 android:layout_gravity="center"
-                android:backgroundTint="@color/textColorHint" />
+                android:backgroundTint="@color/glass_blue_1" />
 
             <Button
                 android:id="@+id/btn_feedback_remove_image"
@@ -131,7 +131,7 @@
                 android:layout_gravity="center"
                 android:text="X"
                 android:layout_marginStart="16dp"
-                android:backgroundTint="@color/button_background"
+                android:backgroundTint="@color/glass_blue_1"
                 android:visibility="gone" /> <!-- Initially hidden, only show if there's an image -->
 
         </LinearLayout>
@@ -143,7 +143,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:backgroundTint="@color/textColorHint"
+                android:backgroundTint="@color/glass_blue_1"
                 android:text="Submit"
                 android:textColor="@android:color/white" />
         </LinearLayout>
