--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -135,7 +135,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/textColorHint"
+                android:backgroundTint="@color/glass_blue_1"
                 android:text="Add"
                 android:textSize="18sp"
                 app:cornerRadius="20dp"/>
