--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f6fcfd"
+    android:background="@drawable/glass_bg"
     tools:context=".HomeActivity">
 
     <ScrollView
