--- a/app/src/main/res/layout/activity_list_product.xml
+++ b/app/src/main/res/layout/activity_list_product.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_food"
-    android:background="#f6fcfd"
+    android:background="@drawable/glass_bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListProductActivity">
