--- a/app/src/main/res/layout/activity_user_panel.xml
+++ b/app/src/main/res/layout/activity_user_panel.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="?android:attr/windowBackground">
+    android:background="@drawable/glass_bg">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -67,7 +67,7 @@
                 android:text="Full Name"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:textColor="@color/black" />
+                android:textColor="@android:color/white" />
 
             <TextView
                 android:id="@+id/tvEmail"
@@ -75,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:text="user@example.com"
                 android:textSize="14sp"
-                android:textColor="@color/gray" />
+                android:textColor="@color/glass_white_80" />
         </LinearLayout>
     </LinearLayout>
 
@@ -96,7 +96,7 @@
             android:layout_height="50dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/button_background"
+            android:backgroundTint="@color/glass_blue_1"
             android:text="View My Orders"
             android:textColor="@android:color/white" />
 
@@ -105,7 +105,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/button_background"
+            android:backgroundTint="@color/glass_blue_1"
             android:text="Feedback"
             android:textColor="@android:color/white" />
     </LinearLayout>
