--- a/app/src/main/res/layout/activity_view_admin_dash_board.xml
+++ b/app/src/main/res/layout/activity_view_admin_dash_board.xml
@@ -20,7 +20,7 @@
             android:layout_height="56dp"
             android:id="@+id/toolbar"
             android:elevation="4dp"
-            android:background="@color/textColorHint"
+            android:background="@color/glass_blue_1"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
@@ -36,10 +36,9 @@
         android:layout_height="match_parent"
         android:id="@+id/nav_view"
         android:layout_gravity="start"
+        android:theme="@style/NavigationViewStyle"
         app:headerLayout="@layout/ad_nav_header"
-        app:menu="@menu/ad_nav_menu"
-        app:itemIconTint="@color/textColorHint"
-        app:itemTextColor="@color/textColorHint"/>
+        app:menu="@menu/ad_nav_menu"/>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -50,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@color/white"
+            android:background="@drawable/glass_card"
             app:fabCradleMargin="10dp"
             app:fabCradleRoundedCornerRadius="50dp">
 
