--- a/app/src/main/res/layout/fragment_admin_manage_product.xml
+++ b/app/src/main/res/layout/fragment_admin_manage_product.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:text="View Top Trending Product"
             android:textSize="20sp"
-            android:backgroundTint="@color/textColorHint"
+            android:backgroundTint="@color/glass_blue_1"
             android:onClick="openViewTopTrendingProduct" />
 
         <Button
@@ -28,7 +28,7 @@
             android:text="Add New Product"
             android:textSize="20sp"
             android:layout_marginTop="16dp"
-            android:backgroundTint="@color/textColorHint"
+            android:backgroundTint="@color/glass_blue_1"
             android:onClick="openAddProductActivity" />
 
         <Button
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Update Product"
-            android:backgroundTint="@color/textColorHint"
+            android:backgroundTint="@color/glass_blue_1"
             android:textSize="20sp"
             android:layout_marginTop="16dp"
             android:onClick="openUpdateProductActivity" />
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Manage Category"
-            android:backgroundTint="@color/textColorHint"
+            android:backgroundTint="@color/glass_blue_1"
             android:textSize="20sp"
             android:layout_marginTop="16dp"
             android:onClick="openManageCategory" />
