--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,10 @@
     <color name="glass_border_white">#40FFFFFF</color>
     <color name="glass_link_blue">#B3E5FC</color>
 
+    <color name="colorPrimaryBlue">#2196F3</color>
+    <color name="colorDarkBlue">#1976D2</color>
+    <color name="colorLightBlue">#BBDEFB</color>
+    <color name="colorTextDark">#333333</color>
+    <color name="colorTextLight">#FFFFFF</color>
+
 </resources>
