--- a/app/src/main/res/layout/fragment_admin_manage_product.xml
+++ b/app/src/main/res/layout/fragment_admin_manage_product.xml
@@ -50,6 +50,15 @@
             android:layout_marginTop="16dp"
             android:onClick="openManageCategory" />
 
+        <Button
+            android:id="@+id/btnManageOrder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Manage Order"
+            android:backgroundTint="@color/textColorHint"
+            android:textSize="20sp"
+            android:layout_marginTop="16dp" />
+
 
     </LinearLayout>
 
