--- a/app/src/main/res/menu/ad_bottom_menu.xml
+++ b/app/src/main/res/menu/ad_bottom_menu.xml
@@ -18,7 +18,7 @@
 
     <item
         android:id="@+id/ad_bottom_nav_manage_feedback"
-        android:title="Manage Product"
+        android:title="Manage Feedback"
         android:icon="@drawable/baseline_window_24" />
 
 </menu>
