--- a/app/src/main/res/layout/pop_up_add_cart.xml
+++ b/app/src/main/res/layout/pop_up_add_cart.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="20dp"
-    android:background="@drawable/rectangle_white_rounded_button">
+    android:background="@drawable/glass_bg">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,6 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!-- Product Image & Price -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -25,6 +26,8 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:scaleType="fitXY"
+                android:background="@drawable/glass_card"
+                android:elevation="4dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
@@ -36,8 +39,9 @@
                 android:layout_marginStart="35dp"
                 android:layout_marginTop="20dp"
                 android:text="20$"
-                android:fontFamily="@font/poppins_light"
-                android:textColor="@color/red"
+                android:fontFamily="@font/poppins_semibold"
+                android:textColor="@color/glass_blue_1"
+                android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/imv_cart_product_image"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,6 +52,8 @@
                 android:layout_marginStart="20dp"
                 android:text="100$"
                 android:fontFamily="@font/poppins_light"
+                android:textColor="@color/glass_white_80"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_cart_new_price"
                 app:layout_constraintStart_toEndOf="@+id/tv_cart_new_price"
                 app:layout_constraintTop_toTopOf="@+id/tv_cart_new_price" />
@@ -59,10 +65,12 @@
                 android:layout_marginTop="10dp"
                 android:text="Stock: 200"
                 android:fontFamily="@font/poppins_light"
+                android:textColor="@color/glass_white_80"
                 app:layout_constraintStart_toStartOf="@+id/tv_cart_new_price"
                 app:layout_constraintTop_toBottomOf="@+id/tv_cart_new_price" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <!-- Size -->
         <TextView
             android:id="@+id/tv_size_text"
             android:layout_width="wrap_content"
@@ -70,25 +78,24 @@
             android:layout_marginTop="10dp"
             android:text="Size"
             android:fontFamily="@font/poppins_semibold"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@android:color/white" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcv_size"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
+        <!-- Color -->
         <TextView
             android:id="@+id/tv_color_text"
             android:layout_width="wrap_content"
@@ -96,34 +103,35 @@
             android:layout_marginTop="10dp"
             android:text="Color"
             android:fontFamily="@font/poppins_semibold"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@android:color/white" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcv_color"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <!-- Quantity -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_weight="1">
+            android:layout_marginTop="20dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_light"
                 android:text="Quantity"
+                android:textColor="@android:color/white"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
@@ -135,60 +143,60 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-
                 <Button
                     android:id="@+id/btn_minus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:minHeight="0dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/rounded_button_outline_orange"
+                    android:backgroundTint="@color/glass_blue_1"
                     android:minWidth="0dp"
-                    android:paddingTop="0dp"
-                    android:paddingBottom="0dp"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:background="@drawable/custom_btn_add"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/edtColor"
-                    android:text="-" />
+                    android:minHeight="0dp"
+                    android:text="-"
+                    android:textColor="@color/black"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/tv_quantity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/rectangle_edit_text"
+                    android:layout_width="56dp"
+                    android:layout_height="48dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/glass_card"
                     android:ems="2"
                     android:gravity="center"
                     android:inputType="numberDecimal"
                     android:text="1"
-                    android:textSize="20sp" />
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <Button
                     android:id="@+id/btn_plus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:minHeight="0dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/rounded_button_outline_orange"
+                    android:backgroundTint="@color/glass_blue_1"
                     android:minWidth="0dp"
-                    android:paddingTop="0dp"
-                    android:paddingBottom="0dp"
-                    android:paddingLeft="8dp"
-                    android:textSize="16sp"
-                    android:paddingRight="8dp"
-                    app:backgroundTint="@color/edtColor"
-                    android:background="@drawable/custom_btn_remove"
-                    android:text="+" />
+                    android:minHeight="0dp"
+                    android:text="+"
+                    android:textColor="@color/black"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+        <!-- Confirm Button -->
         <Button
             android:id="@+id/btn_submit"
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:textSize="20sp"
-            app:backgroundTint="@color/edtColor"
-            android:text="Confirm" />
-
+            android:backgroundTint="@color/glass_blue_1"
+            android:textColor="@android:color/white"
+            android:text="Confirm"
+            app:cornerRadius="12dp" />
 
     </LinearLayout>
 
