--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,125 +52,125 @@
                 android:id="@+id/edt_register_fullname"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/input_glass"
                 android:drawableLeft="@drawable/baseline_person_24"
                 android:drawablePadding="8dp"
-                android:hint="Họ và tên"
-                android:textColor="@android:color/white"
-                android:padding="15dp"
-                android:textColorHint="#B3FFFFFF"
-                android:fontFamily="@font/poppins_light"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:gravity="center_vertical"
-                android:singleLine="true"
                 android:ellipsize="end"
+                android:fontFamily="@font/poppins_light"
+                android:gravity="center_vertical"
+                android:hint="Họ và tên"
+                android:padding="10dp"
                 android:scrollHorizontally="true"
-                android:layout_marginBottom="10dp" />
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="#B3000000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/edt_register_email"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/input_glass"
                 android:drawableLeft="@drawable/baseline_email_24"
                 android:drawablePadding="8dp"
-                android:hint="Email"
-                android:padding="15dp"
-                android:textColor="@android:color/white"
-                android:textColorHint="#B3FFFFFF"
-                android:fontFamily="@font/poppins_light"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:gravity="center_vertical"
-                android:singleLine="true"
                 android:ellipsize="end"
+                android:fontFamily="@font/poppins_light"
+                android:gravity="center_vertical"
+                android:hint="Email"
+                android:padding="10dp"
                 android:scrollHorizontally="true"
-                android:layout_marginBottom="10dp" />
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="#B3000000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/edt_register_dob"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/input_glass"
                 android:drawableLeft="@drawable/baseline_date_range_24"
                 android:drawablePadding="8dp"
-                android:hint="Ngày sinh"
-                android:focusable="false"
-                android:inputType="none"
-                android:padding="15dp"
-                android:textColor="@android:color/white"
-                android:textColorHint="#B3FFFFFF"
-                android:fontFamily="@font/poppins_light"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:gravity="center_vertical"
-                android:singleLine="true"
                 android:ellipsize="end"
+                android:focusable="false"
+                android:fontFamily="@font/poppins_light"
+                android:gravity="center_vertical"
+                android:hint="Ngày sinh"
+                android:inputType="none"
+                android:padding="10dp"
                 android:scrollHorizontally="true"
-                android:layout_marginBottom="10dp" />
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="#B3070707"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/edt_register_phone"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/input_glass"
                 android:drawableLeft="@drawable/baseline_phone_24"
                 android:drawablePadding="8dp"
-                android:hint="Số điện thoại"
-                android:padding="15dp"
-                android:textColor="@android:color/white"
-                android:textColorHint="#B3FFFFFF"
-                android:fontFamily="@font/poppins_light"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:gravity="center_vertical"
-                android:singleLine="true"
                 android:ellipsize="end"
+                android:fontFamily="@font/poppins_light"
+                android:gravity="center_vertical"
+                android:hint="Số điện thoại"
+                android:padding="10dp"
                 android:scrollHorizontally="true"
-                android:layout_marginBottom="10dp" />
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="#B3000000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/edt_register_password"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/input_glass"
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/poppins_light"
+                android:gravity="center_vertical"
                 android:hint="Mật khẩu"
                 android:inputType="textPassword"
-                android:padding="15dp"
-                android:textColor="@android:color/white"
-                android:textColorHint="#B3FFFFFF"
-                android:fontFamily="@font/poppins_light"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:gravity="center_vertical"
-                android:singleLine="true"
-                android:ellipsize="end"
+                android:padding="10dp"
                 android:scrollHorizontally="true"
-                android:layout_marginBottom="10dp" />
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="#B3101010"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/edt_register_re_password"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/input_glass"
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/poppins_light"
+                android:gravity="center_vertical"
                 android:hint="Nhập lại mật khẩu"
                 android:inputType="textPassword"
-                android:padding="15dp"
-                android:textColor="@android:color/white"
-                android:textColorHint="#B3FFFFFF"
-                android:fontFamily="@font/poppins_light"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:gravity="center_vertical"
-                android:singleLine="true"
-                android:ellipsize="end"
+                android:padding="10dp"
                 android:scrollHorizontally="true"
-                android:layout_marginBottom="16dp" />
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="#B3000000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_register"
